Test build bootstrap

--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -56,7 +56,7 @@
 <div class="row">
   <div class="col-xs-4">
     <label for="input-@body-bg">@body-bg</label>
-    <input id="input-@body-bg" type="text" aria-describedby="help-block-@body-bg" value="#fff" data-var="@body-bg" class="form-control"/>
+    <input id="input-@body-bg" type="text" aria-describedby="help-block-@body-bg" value="#ccc" data-var="@body-bg" class="form-control"/>
     <p id="help-block-@body-bg" class="help-block">Background color for <code>&lt;body&gt;</code>.</p>
   </div>
   <div class="col-xs-4">
